deployment_secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: sample-python-app
        image: yogendrakokamkar/python-sample-app-demo:v1
        volumeMounts:
         - name: db-connection
           mountPath: /opt/db-connection
         - name: db-password
           mountPath: /opt/db-password
        ports:
          - containerPort: 8000
      volumes:
       - name: db-connection
         configMap:
           name: cm-sample-python-app
       - name: db-password
         secret:
          secretName: secret-sample-python-app
